# spotify-auto-mute

./: .gitignore  Cargo.toml  README.md  config.json
src/: main.rs
