[package]
name = "spotify-auto-mute"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation", 
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_Media_Audio"
]
